--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://lc0.github.com
+url: http://lc0.github.io
 title: thoughts in plain text  
 subtitle: "my thoughts about software engineering, startups, science and people"
 author: Sergii Khomenko
